Add automatic field-level usage tracking for entities, DTOs, and tuples
Detect suboptimal data fetching by tracking which fields of fetched objects
are actually accessed during tests. Uses ByteBuddy class instrumentation
to automatically intercept constructors (registration) and getters (access
recording) — no manual wrapping or code changes needed in business code.

Tracking activates on takeSnapshot() and reports in @AfterEach. Optional
usageThreshold setting (0-100) fails tests when average field usage drops
below the configured percentage.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>